refactor: clean builder first static analysis